# btcpayserver-companion

./: .dockerignore  .env.example  .gitignore  BUILD.md  CLAUDE.md  DISTRIBUTION.md  Dockerfile.build-linux  PERFORMANCE_REPORT.md  README.md  README_STATIC_EXPORT.md  biome.json  changelog.md  docker-compose.build.yml  greenfield-api-swagger.json  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-tauri.yml
docs/: presentation.html
plugins/: README.md
plugins/cryptochat/: README.md  index.tsx  manifest.json  package.json
plugins/event-checkin/: index.tsx  manifest.json  package.json  settings.tsx
plugins/financial-analysis/: FinancialAnalysisApp.tsx  FinancialAnalysisSettings.tsx  FinancialAnalysisSettings.tsx.old  FinancialAnalysisSettingsContent.tsx  FinancialAnalysisWrapper.tsx  index.tsx  manifest.json  package.json
plugins/plugin-template/: README.md  index.tsx  manifest.json
scripts/: build-app.sh  build-linux-docker.sh  build-windows-xwin.sh  docker-shell.sh  llvm-rc  llvm-rc-stub
src/: middleware.ts.bak
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/contexts/: expenses-context.tsx  plugins-context.tsx  stores-context.tsx
src/hooks/: use-check-in-server.ts  use-check-in.ts
src/lib/: app-config.ts  btcpay-client-wrapper.ts  config.ts  crypto.ts  encrypted-indexeddb.ts  env.ts  expenses.ts  index.ts  indexeddb.ts  plugin-loader.ts  plugin-registry.tsx  stores-helper.ts
(+139 files in other folders)
